--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ PORT=5000
 
 
 # MongoDB connection URI
-MONGODB_URI=mongodb://localhost:27017/blogging-app
+MONGODB_URI=mongodb://127.0.0.1:27017/blog-app
+
 
 # JWT Secret for signing JWT tokens
 JWT_SECRET=123456
